# client-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: client.h  communication.h  logging.h  seeds.h  server.h
src/: CMakeLists.txt
src/receiver/: CMakeLists.txt  client.cpp  main_client.cpp
src/shared/: CMakeLists.txt  communication.cpp  logging.cpp  seeds.cpp
src/transmitter/: CMakeLists.txt  main_server.cpp  server.cpp
tests/: CMakeLists.txt  seeds_test.cpp
